Login, signup and product list integration

--- a/uzhavam/ui/src/Component/dashboard.scss
+++ b/uzhavam/ui/src/Component/dashboard.scss
@@ -59,6 +59,9 @@
 }
 
 .productcon{
+    .Imagecon{
+        padding:10px 0 0 10px;
+    }
   .proName{
       font-size: 22px;
       font-weight: 600;
