--- a/Sample_Admin_Pannel/src/scss/_custom.scss
+++ b/Sample_Admin_Pannel/src/scss/_custom.scss
@@ -5,3 +5,13 @@
 .mar_top20{
     margin-top: 20px !important;
 }
+.mar_right20{
+    margin-right: 20px !important;
+}
+.dispalyFlex{
+    display: flex !important;
+    
+}
+.overflowAuto{
+    overflow-x: auto !important
+}
