--- a/Web_App_Front_End/src/less/utils.less
+++ b/Web_App_Front_End/src/less/utils.less
@@ -2240,6 +2240,7 @@
 .text-left {text-align: left;}
 .text-right {text-align: right;}
 .text-middle {vertical-align: middle;}
+.text-web-center {text-align: -webkit-center;}
 
 /* ------------------------------------ */
 .lh-1-0 {line-height: 1.0;}
@@ -2981,4 +2982,8 @@
 	position: absolute;
 	right: 0px;
 	bottom: 0px;
+}
+
+.outline-n{
+	outline: none !important;
 }
