--- a/uzhavam/ui/src/Common/common.scss
+++ b/uzhavam/ui/src/Common/common.scss
@@ -28,3 +28,9 @@
     padding: 5px 10px;
     background-color: #ddd;
 }
+.disFlex{
+    display: flex !important;
+}
+.textCenter{
+    text-align: center !important;
+}
