--- a/Web_App_Front_End/src/less/utils.less
+++ b/Web_App_Front_End/src/less/utils.less
@@ -978,7 +978,7 @@
 .p-r-17 {padding-right: 17px;}
 .p-r-18 {padding-right: 18px;}
 .p-r-19 {padding-right: 19px;}
-.p-r-20 {padding-right: 20px;}
+.p-r-20 {padding-right: 20px !important;}
 .p-r-21 {padding-right: 21px;}
 .p-r-22 {padding-right: 22px;}
 .p-r-23 {padding-right: 23px;}
@@ -2986,4 +2986,9 @@
 
 .outline-n{
 	outline: none !important;
+}
+
+.border-r-2-black{
+	border-right: 2px  solid #bab7b6 !important;
+
 }
