--- a/uzhavam/ui/src/Admin/style/products.scss
+++ b/uzhavam/ui/src/Admin/style/products.scss
@@ -10,3 +10,26 @@
     width: 100%;
     height: 50px;
 }
+
+//.imgEdit:hover{
+    .imgEdit img:hover{
+        //opacity: 0.3;
+    }
+    .imgEdit label:hover{
+        opacity: 1;
+    }
+//}
+
+.imgEdit{
+    background-color: #eee;
+    height: 200px;
+    text-align: center;
+    label{
+        position: absolute;
+        left: 40%;
+        top: 22%;
+    }
+    .op{
+        opacity: 0;
+    }
+}
