--- a/uzhavam/ui/src/Common/common.scss
+++ b/uzhavam/ui/src/Common/common.scss
@@ -88,4 +88,48 @@
     text-align: center !important;
 }
 
+.badge .MuiBadge-badge{
+    color: #111;
+    background-color: #fff;
+}
+
+.cartListCon{
+    position: relative;
+    min-width: 300px;
+    .CartList{
+        height: 400px;
+        overflow-y: auto;
+        padding: 10px;
+        .CartList2{
+            margin-top: 20px;
+        }
+        .proName{
+            font-size: 16px;
+            font-weight: 600;
+        }
+        .price{
+            color: #333;
+        }
+        .close{
+            padding-top: 5px;
+        }
+    }
+    .cartfooter{
+        width: 100%;
+        background-color: #222;
+        padding: 10px;
+        color: #fff;
+        cursor: pointer;
+       /*  position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0; */
+        .total{
+            font-size: 17px;
+            font-weight: 600;
+            float: right;
+        }
+    }
+}
+
 
