--- a/Web_App_Front_End/src/less/utils.less
+++ b/Web_App_Front_End/src/less/utils.less
@@ -958,7 +958,7 @@
 .p-l-248 {padding-left: 248px;}
 .p-l-249 {padding-left: 249px;}
 .p-l-250 {padding-left: 250px;}
-.p-r-0 {padding-right: 0px;}
+.p-r-0 {padding-right: 0px !important;}
 .p-r-1 {padding-right: 1px;}
 .p-r-2 {padding-right: 2px;}
 .p-r-3 {padding-right: 3px;}
@@ -2991,4 +2991,8 @@
 .border-r-2-black{
 	border-right: 2px  solid #bab7b6 !important;
 
+}
+
+.commonfont{
+	font-family: 'Varela Round', sans-serif !important;
 }
