--- a/Web_App_Front_End/src/css/homeless.css
+++ b/Web_App_Front_End/src/css/homeless.css
@@ -72,7 +72,7 @@
   background-color: white;
 }
 .btn:hover {
-  color: #28a745 !important;
+  color: rgb(199, 199, 199) !important;
 }
 .actives {
   border-bottom: solid #28a745 2px !important;
