--- a/Web_App_Front_End/src/less/utils.less
+++ b/Web_App_Front_End/src/less/utils.less
@@ -707,7 +707,7 @@
 .p-b-248 {padding-bottom: 248px;}
 .p-b-249 {padding-bottom: 249px;}
 .p-b-250 {padding-bottom: 250px;}
-.p-l-0 {padding-left: 0px;}
+.p-l-0 {padding-left: 0px !important;}
 .p-l-1 {padding-left: 1px;}
 .p-l-2 {padding-left: 2px;}
 .p-l-3 {padding-left: 3px;}
@@ -1730,7 +1730,7 @@
 .m-l-12 {margin-left: 12px;}
 .m-l-13 {margin-left: 13px;}
 .m-l-14 {margin-left: 14px;}
-.m-l-15 {margin-left: 15px;}
+.m-l-15 {margin-left: 15px !important;}
 .m-l-16 {margin-left: 16px;}
 .m-l-17 {margin-left: 17px;}
 .m-l-18 {margin-left: 18px;}
@@ -1981,7 +1981,7 @@
 .m-r-12 {margin-right: 12px;}
 .m-r-13 {margin-right: 13px;}
 .m-r-14 {margin-right: 14px;}
-.m-r-15 {margin-right: 15px;}
+.m-r-15 {margin-right: 15px !important;}
 .m-r-16 {margin-right: 16px;}
 .m-r-17 {margin-right: 17px;}
 .m-r-18 {margin-right: 18px;}
@@ -2990,6 +2990,11 @@
 
 .border-r-2-black{
 	border-right: 2px  solid #bab7b6 !important;
+
+}
+
+.border-b-2-black{
+	border-bottom: 2px  solid #bab7b6 !important;
 
 }
 
