--- a/uzhavam/ui/src/User/style/checkout.scss
+++ b/uzhavam/ui/src/User/style/checkout.scss
@@ -20,3 +20,47 @@
 .padding{
     padding: 10px 0;
 }
+
+
+.AddressList{
+    .con{
+        cursor: pointer;
+        font-size: 15px;
+        font-weight: 600;
+        padding: 10px;
+        height: 300px;
+        border: 1px solid #333
+    }
+    .plus{
+        font-size: 50px;
+        padding: 20% 40% 10px;
+    }
+    @media only screen and (max-width: 480px) {
+        .con{
+            height: auto;
+        }
+      }
+}
+.width100{
+    width: 100%;
+}
+
+.mobileTotal{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.mobileTotalBtn{
+    width: 100%;
+    padding:10px;
+}
+.TotalBtn{
+    box-shadow: 0px 0px 10px 0px #aaa;
+    padding: 15px 0;
+    background-color: #fff;
+
+}
+.dummyHeight{
+    height: 70px;
+}
