--- a/uzhavam/ui/src/User/style/checkout.scss
+++ b/uzhavam/ui/src/User/style/checkout.scss
@@ -23,6 +23,19 @@
 
 
 .AddressList{
+    .edit{
+        position: absolute;
+        bottom: 20px;
+        left: 25px;
+    }
+    .select{
+        position: absolute;
+        bottom: 20px;
+        right: 25px;
+    }
+    .edit:hover{
+        text-decoration: underline;
+    }
     .con{
         cursor: pointer;
         font-size: 15px;
