order page integration and thankyou page

--- a/uzhavam/ui/src/User/style/dashboard.scss
+++ b/uzhavam/ui/src/User/style/dashboard.scss
@@ -57,6 +57,10 @@
     height: 100%;
     overflow-y: auto;
 }
+.categoryCon{
+    display: flex;
+    overflow-x: auto;
+}
 
 .userList{
     .Imagecon{
