Excel sheet import validation

--- a/uzhavam/ui/src/Admin/style/products.scss
+++ b/uzhavam/ui/src/Admin/style/products.scss
@@ -38,7 +38,7 @@
     overflow-x: auto;
     padding: 0;
     table{
-        width: 150%;
+        min-width: 350%;
         margin-bottom: 0;
     }
 }
