--- a/uzhavam/ui/src/Common/common.scss
+++ b/uzhavam/ui/src/Common/common.scss
@@ -145,3 +145,29 @@
     top: 8px;
     color: #fff;
 }
+
+.HeaderSearch{
+    input{
+        //width: 60%;
+        margin-left: 30px;
+    }
+    svg{
+        color: #fff;
+    }
+
+}
+.HeaderPincode{
+    color: rgba(255,255,255,.5);
+    margin-left: 30px;
+    svg{
+        margin: 0 5px;
+    }
+}
+.msearch{
+    width: 100%;
+    padding: 10px;
+    position: fixed;
+    margin-top: 55px;
+    background-color: #fff;
+    z-index: 1;
+}
