--- a/uzhavam/ui/src/User/style/products.scss
+++ b/uzhavam/ui/src/User/style/products.scss
@@ -2,7 +2,29 @@
     box-shadow: 0px 0px 30px -11px #aaa;
     cursor: pointer;
 }
+.productView{
+    margin: 15px;
+}
+.offer{
+    background: url(../../Image/offer.svg) center no-repeat;
+    width: 38px;
+    height: 38px;
+    color: #ffffff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    font-size: 10px;
+    padding: 8px 0px;
+    line-height: 11px;
+    font-family: JioMedium;
+    text-align: center;
+}
+.free_font{
+    color: #ffffff;
+}
 .proCon{
+    box-shadow: 0px 0px 30px -11px #aaa;
     flex-wrap: wrap;
     display: flex;
     padding:15px;
@@ -10,10 +32,7 @@
     .proName{
         font-size: 18px;
         margin-top: 20px;
-    }
-    .offer{
-        font-size: 15px;
-        color:#02b3ff
+        font-weight: 500;
     }
     .imgp{
         height: 200px;
@@ -95,10 +114,14 @@
 
 @media only screen and (max-width: 480px) {
     .proCon{
-        border-bottom: 1px solid #eee;
+        border-bottom: 2px solid rgba(0,0,0,.09);
+    }
+    .productView{
+        margin: 15px 0px 0px 15px;
     }
     .proCon .proName{
         margin-top: 0;
+        font-weight: 500;
     }
     .mobileImgD{
         height: auto  !important;
