--- a/uzhavam/ui/src/User/style/checkout.scss
+++ b/uzhavam/ui/src/User/style/checkout.scss
@@ -52,6 +52,11 @@
         .con{
             height: auto;
         }
+        .edit{
+            position: relative;
+            bottom: 0;
+            left: 0;
+        }
       }
 }
 .width100{
