--- a/uzhavam/ui/src/User/style/products.scss
+++ b/uzhavam/ui/src/User/style/products.scss
@@ -1,9 +1,12 @@
-.proCon:hover{
+/* .proCon:hover{
     box-shadow: 0px 0px 30px -11px #aaa;
     cursor: pointer;
-}
+} */
 .productView{
     margin: 15px;
+}
+.mrpCon{
+    padding-top: 8px;
 }
 .offer{
     background: url(../../Image/offer.svg) center no-repeat;
@@ -20,6 +23,9 @@
     font-family: JioMedium;
     text-align: center;
 }
+.MuiButton-root:hover.Mui-disabled{
+    background-color: #343a40 !important;
+}
 .free_font{
     color: #ffffff;
 }
@@ -30,9 +36,9 @@
     padding:15px;
     //@at-root: 10px 0;
     .proName{
-        font-size: 18px;
+        font-size: 16px;
         margin-top: 20px;
-        font-weight: 500;
+        font-weight: bold;
     }
     .imgp{
         height: 200px;
@@ -60,7 +66,7 @@
     }
     .proPrice{
         b{
-            font-size: 23px;
+            font-size: 20px;
         }
         span{
             text-decoration: line-through;
@@ -68,7 +74,7 @@
         
         .pActive{
             text-decoration: none;
-            font-size: 23px;
+            font-size: 20px;
         }
     }
     .rateUserCount{
@@ -78,7 +84,6 @@
         margin-top: -2px;
     }
     .addCartbtn{
-        border: 1px solid #d7d7d7;
         //padding: 10px;
         text-align: center;
         background-color: #fff;
@@ -101,6 +106,9 @@
             min-width: 0;
             //position: absolute;
             padding: 8px;
+            border: 2px solid #343a40;
+            background-color: #343a40;
+            color: #fff;
         }
        /*  .add{
             right:0
@@ -115,18 +123,30 @@
 @media only screen and (max-width: 480px) {
     .proCon{
         border-bottom: 2px solid rgba(0,0,0,.09);
+        box-shadow: none;
+    }
+    .adjustRowMob{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .mobSizeCon{
+        max-width: 210px;
     }
     .productView{
         margin: 15px 0px 0px 15px;
     }
     .proCon .proName{
         margin-top: 0;
-        font-weight: 500;
+        font-weight: bold;
     }
     .mobileImgD{
         height: auto  !important;
         padding-right: 10px !important;
         padding-bottom: 10px;
+        min-width: 130px;
+    }
+    .add,.remove{
+        border-radius: 50%;
     }
   }
 
