--- a/uzhavam/ui/src/style/common.scss
+++ b/uzhavam/ui/src/style/common.scss
@@ -300,3 +300,10 @@ input:checked + .slider:before {
   text-align: center;
   margin-top: 10pc;
 }
+.ProductToast{
+  padding: 5px;
+    margin: 7px;
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
